Update Firebase configuration with complete credentials

--- a/index.html
+++ b/index.html
@@ -284,16 +284,15 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
         import { getDatabase, ref, set, get, onValue } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
 
-        // Configuração do Firebase - VOCÊ AINDA PRECISA PREENCHER OS VALORES!
-        // Vá em: Firebase Console → Configurações do Projeto → Seus Apps → SDK Config
+        // Configuração do Firebase - CREDENCIAIS COMPLETAS
         const firebaseConfig = {
-            apiKey: "COLE_SUA_API_KEY_AQUI",
+            apiKey: "AIzaSyCQC_0HNjLD7zOVF_GVRB6pK58o3nLMw9E",
             authDomain: "lista-presentes-sofia.firebaseapp.com",
             databaseURL: "https://lista-presentes-sofia-default-rtdb.firebaseio.com",
             projectId: "lista-presentes-sofia",
-            storageBucket: "lista-presentes-sofia.appspot.com",
-            messagingSenderId: "COLE_SEU_MESSAGING_SENDER_ID_AQUI",
-            appId: "COLE_SEU_APP_ID_AQUI"
+            storageBucket: "lista-presentes-sofia.firebasestorage.app",
+            messagingSenderId: "685854207964",
+            appId: "1:685854207964:web:114bc2207af2dc5d066919"
         };
 
         // Inicializar Firebase
